--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "gojs_09",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "lodash.throttle": "^4.1.1",
+    "validator": "^13.7.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Pavlo-Zubovych/goJs_09.git"
   },
   "keywords": [],
   "author": "Pavlo Zubvych <zu10@ukr.net>",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "lodash.throttle": "^4.1.1"
-  }
+  "bugs": {
+    "url": "https://github.com/Pavlo-Zubovych/goJs_09/issues"
+  },
+  "homepage": "https://github.com/Pavlo-Zubovych/goJs_09#readme"
 }
